all Trotter back to caps!

--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Simulating nature\n",
     "\n",
-    "Watch the video on mapping from Olivia Lanes.\n",
+    "Watch this video from Olivia Lanes on simulating nature with quantum computers.\n",
     "\n",
     "<IBMVideo id=\"134460549\" title=\"In this video, Olivia Lanes describes how a quantum computer can be used to simulate nature, including at the utility scale.\"/>\n",
     "\n",
@@ -145,9 +145,9 @@
     "$$\n",
     "where we have set $\\hbar=1$ by convention. Applying this operator to our initial state gives us the final state: $|\\phi(t)\\rangle = e^{-iHt}|\\phi(t=0)\\rangle$\n",
     "\n",
-    "However, building a quantum circuit that directly implements the full operator $e^{-iHt}$ is typically impossible when our Hamiltonian is a sum of different parts, therefore, we need the Trotterization.\n",
+    "However, building a quantum circuit that directly implements the full operator $e^{-iHt}$ is typically impossible when our Hamiltonian is a sum of different parts. Therefore, we need Trotterization.\n",
     "\n",
-    "In simple terms, trotterization is a technique for approximating the exponentiation of a matrix (here the Hamiltonian, $H$), especially when the exponent contains non-commuting operators ($[H_A, H_B] \\neq 0$). Often the Hamiltonian $H$ consists of multiple operators that do not commute. In this case, you cannot separate their exponentials:\n",
+    "In simple terms, Trotterization is a technique for approximating the exponentiation of a matrix (here the Hamiltonian, $H$), especially when the exponent contains non-commuting operators ($[H_A, H_B] \\neq 0$). Often the Hamiltonian $H$ consists of multiple operators that do not commute. In this case, you cannot separate their exponentials:\n",
     "$$\n",
     "e^{-i(H_A + H_B)t} \\neq e^{-iH_A t}e^{-iH_B t}\n",
     "$$\n",
@@ -158,7 +158,7 @@
     "e^{−i H t}\\approx \\left(e^{−i H_A t/n}e^{−i H_B t/n}\\right)^n\n",
     "$$\n",
     "\n",
-    "![A quantum circuit showing trotterized time-evolution operators: operators split into small pieces.](/learning/images/courses/quantum-computing-in-practice/simulating-nature/trotter.svg)\n",
+    "![A quantum circuit showing Trotterized time-evolution operators: operators split into small pieces.](/learning/images/courses/quantum-computing-in-practice/simulating-nature/trotter.svg)\n",
     "\n",
     "The error introduced by this approximation is called the Trotter error. We can reduce this error by increasing $n$, but this comes at a cost. More advanced, higher-order formulas (the second-order and other variants) also exist. For example, the second-order formula offers better accuracy by applying the steps in a symmetric pattern.\n",
     "\n",
@@ -171,7 +171,7 @@
     "\n",
     "Here, $N$ is the number of non-commuting terms, $H_j$, in the Hamiltonian to be broken up in this way, and $n$ is the number of small time steps into which this evolution is broken. Note the reverse order of operators in the second product in the second-order treatment.\n",
     "\n",
-    "See the trotterization section in the [Quantum Diagonalization Algorithms](/learning/courses/quantum-diagonalization-algorithms/krylov#31-time-evolution) course for more details."
+    "See the Trotterization section in the [Quantum Diagonalization Algorithms](/learning/courses/quantum-diagonalization-algorithms/krylov#31-time-evolution) course for more details."
    ]
   },
   {
@@ -181,7 +181,7 @@
    "source": [
     "__5. Circuit optimization__\n",
     "\n",
-    "After generating the trotterized circuit, the mapping step is complete, and we can proceed to circuit optimization. This process involves several key tasks:\n",
+    "After generating the Trotterized circuit, the mapping step is complete, and we can proceed to circuit optimization. This process involves several key tasks:\n",
     "\n",
     "- __Establish a qubit layout__ that maps the abstract qubits of the circuit to the physical qubits on the hardware. This step is necessary because the hardware’s architecture often has specific connectivity constraints, while quantum circuit designs typically assume any qubit can interact with any other.\n",
     "- __Insert swap gates__ as needed to enable interactions between qubits that are not directly connected on the device.\n",
@@ -231,7 +231,7 @@
     "\n",
     "Since this series is titled Quantum Computing in Practice, we will cover additional details of the experimental techniques used to improve the quality of the results. One important procedure involves identifying and removing \"bad\" qubits—those with low gate fidelities or short decoherence times—that could significantly impact the experiment's outcome. Such problematic qubits may arise from poor calibration or interactions with two-level systems (TLS). Removing these qubits alters the hardware's native topology, effectively changing the lattice on which the system is simulated.\n",
     "\n",
-    "Additionally, we will discuss how to construct the parametrized quantum circuit that implements the system’s time-evolution using trotterization. A key part of this process is identifying entangling layers within the circuit, which play a crucial role in the main error mitigation technique.\n",
+    "Additionally, we will discuss how to construct the parametrized quantum circuit that implements the system’s time-evolution using Trotterization. A key part of this process is identifying entangling layers within the circuit, which play a crucial role in the main error mitigation technique.\n",
     "\n",
     "\n",
     "### Qiskit patterns step 1: Map\n",
@@ -241,7 +241,7 @@
     "\n",
     "* Creates a parameterized Ising model circuit\n",
     "* Creates entangling layers and removes bad qubits\n",
-    "* Generates a trotterized version of the circuit\n",
+    "* Generates a Trotterized version of the circuit\n",
     "\n",
     "In the tutorial, we begin by creating a series of helper functions early in the notebook. These functions are designed to simplify the process as we proceed. These are not a required part of the procedure, but this is good common practice when working on similar experiments: break down the problem into manageable components. The functions include\n",
     "\n",
@@ -249,7 +249,7 @@
     "- Define qubit couplings\n",
     "- Construct the layer couplings\n",
     "- Construct the entangling layer\n",
-    "- Define the trotterized circuit\n",
+    "- Define the Trotterized circuit\n",
     "\n",
     "Here, let us explore topics related to these functions a bit more."
    ]
@@ -293,7 +293,7 @@
    "source": [
     "__Trotterized circuit__\n",
     "\n",
-    "It is now time to construct our trotterized circuit. As discussed earlier, trotterization breaks down the time evolution into discrete steps, so we need to choose how many steps to use. For this example, we will select six steps. Generally, the approach involves balancing the trotter error—an approximation error introduced by the algorithm—with errors caused by decoherence. Increasing the number of trotter steps reduces the approximation error but requires deeper quantum circuits, which are more susceptible to decoherence noise.\n",
+    "It is now time to construct our Trotterized circuit. As discussed earlier, Trotterization breaks down the time evolution into discrete steps, so we need to choose how many steps to use. For this example, we will select six steps. Generally, the approach involves balancing the Trotter error—an approximation error introduced by the algorithm—with errors caused by decoherence. Increasing the number of Trotter steps reduces the approximation error but requires deeper quantum circuits, which are more susceptible to decoherence noise.\n",
     "\n",
     "The circuit will be defined using several parameters: the theta parameter representing the strength of the external magnetic field, the couplings between layers, the number of steps, the number of qubits, and, of course, the choice of the device backend. Since the magnetization of the system depends on the external magnetic field’s strength, it is valuable to run the simulation at different magnetic field values. This variation corresponds to different rotation angles for the RX gate in the circuit.\n",
     "\n",
