ran tox and fix

--- a/learning/modules/computer-science/grovers.ipynb
+++ b/learning/modules/computer-science/grovers.ipynb
@@ -5,7 +5,7 @@
    "id": "9857bace",
    "metadata": {},
    "source": [
-    "# Grover's algorithm\n"
+    "# Grover's algorithm"
    ]
   },
   {
@@ -73,7 +73,7 @@
     "\n",
     "Amplitude amplification is a general purpose quantum algorithm, or subroutine, that can be used to obtain a quadratic speedup over a handful of classical algorithms. [Grover’s algorithm](https://arxiv.org/abs/quant-ph/9605043) was the first to demonstrate this speedup on unstructured search problems. Formulating a Grover's search problem requires an oracle function that marks one or more computational basis states as the states we are interested in finding, and an amplification circuit that increases the amplitude of marked states, consequently suppressing the remaining states.\n",
     "\n",
-    "Here, we demonstrate how to construct Grover oracles and use the `GroverOperator` from the Qiskit circuit library to easily set up a Grover's search instance. The runtime `Sampler` primitive allows seamless execution of Grover circuits.\n"
+    "Here, we demonstrate how to construct Grover oracles and use the `GroverOperator` from the Qiskit circuit library to easily set up a Grover's search instance. The runtime `Sampler` primitive allows seamless execution of Grover circuits."
    ]
   },
   {
@@ -85,19 +85,19 @@
     "Suppose there exists a function $f$ that maps binary strings to a single binary variable, meaning\n",
     "$$\n",
     "f: \\Sigma^n \\rightarrow \\Sigma\n",
-    "$$ \n",
-    "One example defined on $\\Sigma^6$ is \n",
+    "$$\n",
+    "One example defined on $\\Sigma^6$ is\n",
     "$$\n",
     "f(x)= \\begin{cases} 1 \\qquad \\text{if }x=\\{010101\\}\\\\\n",
     "0 \\qquad \\text{otherwise }\n",
     "\\end{cases}\n",
-    "$$ \n",
+    "$$\n",
     "Another example defined on $\\Sigma^{2n}$ is\n",
     "$$\n",
     "f(x)= \\begin{cases} 1 \\qquad \\text{if equal numbers of 1's and 0's in string}\\\\\n",
     "0 \\qquad \\text{otherwise }\n",
     "\\end{cases}\n",
-    "$$ \n",
+    "$$\n",
     "You are tasked with finding quantum states corresponding to those arguments $x$ of $f(x)$ that are mapped to 1. In other words, find all $\\{x_1\\}\\in \\Sigma^n$ such that $f(x_1)=1$ (or if there is no solution, report that). We would refer to non-solutions as $x_0$. Of course, we will do this on a quantum computer, using quantum states, so it is useful to express these binary strings as states:\n",
     "$$\n",
     "\\{|x_1\\rangle\\} \\in |\\Sigma^n\\rangle\n",
@@ -108,8 +108,7 @@
     "\n",
     "This is an \"unstructured search problem, in that there is nothing special about $f$ that aids us in our search. The outputs are not sorted nor are solutions known to cluster, and so on. Consider use old, paper phone books as an analogy. This unstructured search would be like scanning through it looking for a certain __number__, and not like looking through an alphabetized list of names.\n",
     "\n",
-    "In the case where a single solution is sought, classically, this requires a number of queries that is linear in $N$. Clearly you might find a solution on the first try, or you might find no solutions in the first $N-1$ guesses, such that you need to query the $N^{th}$ input to see if there is any solution at all. Since the functions have no exploitable structure, you will require $N/2$ guesses on average. Grover's algorithm requires a number of queries or computations of $f$ that scales like $\\sqrt{N}.$\n",
-    "\n"
+    "In the case where a single solution is sought, classically, this requires a number of queries that is linear in $N$. Clearly you might find a solution on the first try, or you might find no solutions in the first $N-1$ guesses, such that you need to query the $N^{th}$ input to see if there is any solution at all. Since the functions have no exploitable structure, you will require $N/2$ guesses on average. Grover's algorithm requires a number of queries or computations of $f$ that scales like $\\sqrt{N}.$"
    ]
   },
   {
@@ -136,7 +135,7 @@
    "id": "15b9e48c",
    "metadata": {},
    "source": [
-    "Often, the marking gate $Z_f$ and the diffusion layers consisting of $H,$ $Z_{\\text{OR}},$ and $H$ are collectively referred to as the \"Grover operator\". In this diagram, only a single repetition of the Grover operator is shown. \n",
+    "Often, the marking gate $Z_f$ and the diffusion layers consisting of $H,$ $Z_{\\text{OR}},$ and $H$ are collectively referred to as the \"Grover operator\". In this diagram, only a single repetition of the Grover operator is shown.\n",
     "\n",
     "Hadamard gates $H$ are well-known and used widely throughout quantum computing. The Hadamard gate creates superposition states. Specifically it is defined by\n",
     "$$\n",
@@ -202,7 +201,7 @@
     "### Example\n",
     "To better understand how Grover's algorithm works, let us work through a small, two-qubit example. This may be considered optional for those not focused on quantum mechanics and Dirac notation. But for those who hope to work substantially with quantum computers, this is highly recommended.\n",
     "\n",
-    "Here is the circuit diagram with the quantum states labeled at various positions throughout. Note that with only two qubits, there are only four possible states that could be measured under any circumstances: $|00\\rangle$, $|01\\rangle$, $|10\\rangle$, and $|11\\rangle$. \n",
+    "Here is the circuit diagram with the quantum states labeled at various positions throughout. Note that with only two qubits, there are only four possible states that could be measured under any circumstances: $|00\\rangle$, $|01\\rangle$, $|10\\rangle$, and $|11\\rangle$.\n",
     "\n",
     "![A diagram of a quantum circuit that implements Grover's algorithm on two qubits.](/learning/images/modules/computer-science/grovers/grover-circuit-diagram-2-q-ex.avif)\n",
     "\n",
@@ -321,8 +320,7 @@
    "id": "5e1d0a46",
    "metadata": {},
    "source": [
-    "## Activity 1: Find a single given target state\n",
-    "\n"
+    "## Activity 1: Find a single given target state"
    ]
   },
   {
@@ -361,7 +359,7 @@
     }
    ],
    "source": [
-    "mcmt_ex=QuantumCircuit(3)\n",
+    "mcmt_ex = QuantumCircuit(3)\n",
     "mcmt_ex.compose(MCMTGate(ZGate(), 3 - 1, 1), inplace=True)\n",
     "mcmt_ex.draw(output=\"mpl\", style=\"iqp\")"
    ]
@@ -405,7 +403,9 @@
     "        # Flip target bit-string to match Qiskit bit-ordering\n",
     "        rev_target = target[::-1]\n",
     "        # Find the indices of all the '0' elements in bit-string\n",
-    "        zero_inds = [ind for ind in range(num_qubits) if rev_target.startswith(\"0\", ind)]\n",
+    "        zero_inds = [\n",
+    "            ind for ind in range(num_qubits) if rev_target.startswith(\"0\", ind)\n",
+    "        ]\n",
     "        # Add a multi-controlled Z-gate with pre- and post-applied X-gates (open-controls)\n",
     "        # where the target bit-string has a '0' entry\n",
     "        qc.x(zero_inds)\n",
@@ -441,7 +441,6 @@
     }
    ],
    "source": [
-    "\n",
     "marked_states = [\"1110\"]\n",
     "oracle = grover_oracle(marked_states)\n",
     "oracle.draw(output=\"mpl\", style=\"iqp\")"
@@ -494,7 +493,7 @@
     "As we argued above, we may need to apply the Grover operator multiple times. The optimal number of iterations, $t,$ to maximize the amplitude of the target state in the absence of noise can be obtained from this expression:\n",
     "$$\n",
     "(2t+1)\\theta = (2t+1)\\sin^{-1}\\left( \\sqrt{\\frac{|A_1|}{N}}\\right) \\approx (2t+1)\\sqrt{\\frac{|A_1|}{N}} \\approx \\frac{\\pi}{2}\\\\\n",
-    "t\\approx \\frac{\\pi}{4} \\sqrt{\\frac{N}{|A_1|}}-\\frac{1}{2} \n",
+    "t\\approx \\frac{\\pi}{4} \\sqrt{\\frac{N}{|A_1|}}-\\frac{1}{2}\n",
     "$$\n",
     "Here $A_1$ is the number of solutions or target states. On modern noisy quantum computers, the experimentally optimal nubmer of iterations might be different. But here we calculate and use this theoretical, optimal number using $A_1=1$."
    ]
@@ -515,8 +514,7 @@
    ],
    "source": [
     "optimal_num_iterations = math.floor(\n",
-    "    math.pi\n",
-    "    / (4 * math.asin(math.sqrt(len(marked_states) / 2**grover_op.num_qubits)))\n",
+    "    math.pi / (4 * math.asin(math.sqrt(len(marked_states) / 2**grover_op.num_qubits)))\n",
     ")\n",
     "print(optimal_num_iterations)"
    ]
@@ -628,10 +626,10 @@
    "source": [
     "target = backend.target\n",
     "pm = generate_preset_pass_manager(target=target, optimization_level=3)\n",
-    " \n",
+    "\n",
     "circuit_isa = pm.run(qc)\n",
     "# The transpiled circuit will be very large. Only draw it if you are really curious.\n",
-    "#circuit_isa.draw(output=\"mpl\", idle_wires=False, style=\"iqp\")"
+    "# circuit_isa.draw(output=\"mpl\", idle_wires=False, style=\"iqp\")"
    ]
   },
   {
@@ -659,7 +657,10 @@
    ],
    "source": [
     "print(\"The total depth is \", circuit_isa.depth())\n",
-    "print(\"The depth of two-qubit gates is \", circuit_isa.depth(lambda instruction: instruction.operation.num_qubits == 2))"
+    "print(\n",
+    "    \"The depth of two-qubit gates is \",\n",
+    "    circuit_isa.depth(lambda instruction: instruction.operation.num_qubits == 2),\n",
+    ")"
    ]
   },
   {
@@ -709,10 +710,10 @@
    "outputs": [],
    "source": [
     "# To run on local simulator:\n",
-    "#from qiskit.primitives import StatevectorSampler as Sampler\n",
-    "#sampler = Sampler()\n",
-    "#result = sampler.run([qc]).result()\n",
-    "#dist = result[0].data.meas.get_counts()"
+    "# from qiskit.primitives import StatevectorSampler as Sampler\n",
+    "# sampler = Sampler()\n",
+    "# result = sampler.run([qc]).result()\n",
+    "# dist = result[0].data.meas.get_counts()"
    ]
   },
   {
@@ -834,7 +835,7 @@
     "# Save to a QPY file at a location where you can easily find it.\n",
     "# You might want to specify a global address.\n",
     "with open(\"C:\\\\Users\\\\...put your own address here...\\\\my_circuit.qpy\", \"wb\") as f:\n",
-    "    qpy.dump(oracle, f)\n"
+    "    qpy.dump(oracle, f)"
    ]
   },
   {
@@ -842,7 +843,7 @@
    "id": "524f5577",
    "metadata": {},
    "source": [
-    "Now send this file to your partner (via email, messaging service, a shared repo, etc.). Have your partner send you their circuit as well. Make sure you save the file somewhere you can easily find it. Once you have your partner's circuit you could visualize it. But that breaks the query model. That is, we're modeling a situation in which you can query the oracle (use the oracle circuit) but not examine it to determine what state it targets. "
+    "Now send this file to your partner (via email, messaging service, a shared repo, etc.). Have your partner send you their circuit as well. Make sure you save the file somewhere you can easily find it. Once you have your partner's circuit you could visualize it. But that breaks the query model. That is, we're modeling a situation in which you can query the oracle (use the oracle circuit) but not examine it to determine what state it targets."
    ]
   },
   {
@@ -862,7 +863,7 @@
     "oracle_partner = circuits[0]\n",
     "\n",
     "# You could visualize the circuit, but this would break the model of a query algorithm.\n",
-    "#oracle_partner.draw(\"mpl\")\n"
+    "# oracle_partner.draw(\"mpl\")"
    ]
   },
   {
@@ -901,8 +902,7 @@
    "source": [
     "grover_op = grover_operator(oracle_partner)\n",
     "optimal_num_iterations = math.floor(\n",
-    "    math.pi\n",
-    "    / (4 * math.asin(math.sqrt(num_marked_states / 2**grover_op.num_qubits)))\n",
+    "    math.pi / (4 * math.asin(math.sqrt(num_marked_states / 2**grover_op.num_qubits)))\n",
     ")\n",
     "qc = QuantumCircuit(grover_op.num_qubits)\n",
     "qc.h(range(grover_op.num_qubits))\n",
@@ -1071,20 +1071,20 @@
     "\n",
     "As a final illustration of how Grover's algorithm might be useful in the context of a subroutine, let us imagine that we need quantum states with a certain number of `1`s in the bitstring representation. This is common in situations where conservation laws are involved. For example, in the context of quantum chemistry, one often maps a `1` state of a qubit to an occupation of an electronic orbital. In order for charge to be conserved, the total number of `1`s must also stay constant. Constraints like this are so common they have a special name: **Hamming weight constraints** and the number of `1`s in the state is called the **Hamming weight**.\n",
     "\n",
-    "## Step 1: \n",
+    "## Step 1:\n",
     "\n",
     "Let us first write a function that marks states with the desired Hamming weight. We will write this in general for an unspecified number of qubits `num_qubits` and target Hamming weight `target_weight`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a3bb0650",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit import QuantumCircuit\n",
-    "from qiskit.circuit.library import MCXGate\n",
+    "\n",
     "\n",
     "def grover_oracle_hamming_weight(num_qubits, target_weight):\n",
     "    \"\"\"\n",
@@ -1098,29 +1098,29 @@
     "        QuantumCircuit: Quantum circuit representing Grover oracle.\n",
     "    \"\"\"\n",
     "    qc = QuantumCircuit(num_qubits)\n",
-    "    marked_count=0\n",
-    "    marked_list=[]\n",
+    "    marked_count = 0\n",
+    "    marked_list = []\n",
     "    for x in range(2**num_qubits):\n",
-    "        bitstr = format(x, f'0{num_qubits}b')\n",
-    "        if bitstr.count('1') == target_weight:\n",
+    "        bitstr = format(x, f\"0{num_qubits}b\")\n",
+    "        if bitstr.count(\"1\") == target_weight:\n",
     "            # Count the number of target states\n",
-    "            marked_count = marked_count+1\n",
+    "            marked_count = marked_count + 1\n",
     "            marked_list.append(bitstr)\n",
     "            # Reverse for Qiskit bit order (qubit 0 is rightmost)\n",
     "            rev_target = bitstr[::-1]\n",
-    "            zero_inds = [i for i, b in enumerate(rev_target) if b == '0']\n",
+    "            zero_inds = [i for i, b in enumerate(rev_target) if b == \"0\"]\n",
     "            # Apply X gates to 'open' controls (where bit is 0)\n",
     "            qc.x(zero_inds)\n",
     "            # Multi-controlled Z (as MCX conjugated by H)\n",
     "            if num_qubits == 1:\n",
     "                qc.z(0)\n",
     "            else:\n",
-    "                qc.h(num_qubits-1)\n",
-    "                qc.mcx(list(range(num_qubits-1)), num_qubits-1)\n",
-    "                qc.h(num_qubits-1)\n",
+    "                qc.h(num_qubits - 1)\n",
+    "                qc.mcx(list(range(num_qubits - 1)), num_qubits - 1)\n",
+    "                qc.h(num_qubits - 1)\n",
     "            # Undo X gates\n",
     "            qc.x(zero_inds)\n",
-    "    return qc, marked_count, marked_list\n"
+    "    return qc, marked_count, marked_list"
    ]
   },
   {
@@ -1150,10 +1150,9 @@
    ],
    "source": [
     "# Completing step 1\n",
-    "oracle, num_marked_states, marked_states = grover_oracle_hamming_weight(3,2)\n",
+    "oracle, num_marked_states, marked_states = grover_oracle_hamming_weight(3, 2)\n",
     "print(marked_states)\n",
-    "oracle.draw(output=\"mpl\", style=\"iqp\")\n",
-    "\n"
+    "oracle.draw(output=\"mpl\", style=\"iqp\")"
    ]
   },
   {
@@ -1189,14 +1188,13 @@
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
     "\n",
     "# Completing step 1\n",
-    "oracle, num_marked_states, marked_states = grover_oracle_hamming_weight(4,2)\n",
+    "oracle, num_marked_states, marked_states = grover_oracle_hamming_weight(4, 2)\n",
     "oracle.draw(output=\"mpl\", style=\"iqp\")\n",
     "\n",
     "grover_op = grover_operator(oracle)\n",
     "grover_op.decompose().draw(output=\"mpl\", style=\"iqp\")\n",
     "optimal_num_iterations = math.floor(\n",
-    "    math.pi\n",
-    "    / (4 * math.asin(math.sqrt(len(marked_states) / 2**grover_op.num_qubits)))\n",
+    "    math.pi / (4 * math.asin(math.sqrt(len(marked_states) / 2**grover_op.num_qubits)))\n",
     ")\n",
     "\n",
     "qc = QuantumCircuit(grover_op.num_qubits)\n",
@@ -1205,7 +1203,7 @@
     "qc.measure_all()\n",
     "qc.draw(output=\"mpl\", style=\"iqp\")\n",
     "\n",
-    "#Step 2: Optimize for running on real quantum computers\n",
+    "# Step 2: Optimize for running on real quantum computers\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
@@ -1224,10 +1222,10 @@
     "dist = result[0].data.meas.get_counts()\n",
     "\n",
     "# To run on local simulator:\n",
-    "#from qiskit.primitives import StatevectorSampler as Sampler\n",
-    "#sampler = Sampler()\n",
-    "#result = sampler.run([qc]).result()\n",
-    "#dist = result[0].data.meas.get_counts()"
+    "# from qiskit.primitives import StatevectorSampler as Sampler\n",
+    "# sampler = Sampler()\n",
+    "# result = sampler.run([qc]).result()\n",
+    "# dist = result[0].data.meas.get_counts()"
    ]
   },
   {
@@ -1247,7 +1245,10 @@
    ],
    "source": [
     "print(\"The total depth is \", circuit_isa.depth())\n",
-    "print(\"The depth of two-qubit gates is \", circuit_isa.depth(lambda instruction: instruction.operation.num_qubits == 2))"
+    "print(\n",
+    "    \"The depth of two-qubit gates is \",\n",
+    "    circuit_isa.depth(lambda instruction: instruction.operation.num_qubits == 2),\n",
+    ")"
    ]
   },
   {
@@ -1359,7 +1360,7 @@
     "1. What other conditions might you use in a quantum oracle? Consider conditions that are easy to state or impose on a bitstring but are not merely writing out the marked bitstrings?\n",
     "\n",
     "\n",
-    "2. Can you see any problems with scaling Grover's algorithm on modern quantum computers?\n"
+    "2. Can you see any problems with scaling Grover's algorithm on modern quantum computers?"
    ]
   }
  ],
@@ -1382,7 +1383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3"
   },
   "title": "Grover's algorithm"
  },
