--- a/learning/modules/computer-science/quantum-key-distribution.ipynb
+++ b/learning/modules/computer-science/quantum-key-distribution.ipynb
@@ -5,7 +5,7 @@
    "id": "290dd4cc-b40a-4d36-9bba-3deda83df5c2",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore cryptoquote crypogram WVXRWVW GSZG YVGGVI NZPV GSRH KIVGGB KVLKOV DROO SZEV VZHRVI GRNV HLOERMT  SLKV NZWV HRNKOV carrat URYYP JIGGY EDGRPOJNCUWQZVMK */}"
+    "{/* cspell:ignore cryptoquote cryptogram WVXRWVW GSZG YVGGVI NZPV GSRH KIVGGB KVLKOV DROO SZEV VZHRVI GRNV HLOERMT  SLKV NZWV HRNKOV carrat URYYP JIGGY EDGRPOJNCUWQZVMK */}"
    ]
   },
   {
@@ -1349,7 +1349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.12"
   },
   "title": "Quantum Key Distribution",
   "widgets": {
