--- a/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
@@ -558,7 +558,15 @@
     "    return int(time.time() * 1000000)\n",
     "\n",
     "\n",
-    "# This function\n",
+    "# This function constructs a Krylov subspace that spans the whole space of the original matrix.\n",
+    "#     Input:\n",
+    "#       v0          : initial vector\n",
+    "#       matrix      : original matrix to be diagonalized\n",
+    "#     Output:\n",
+    "#       ks          : Krylov vectors\n",
+    "#       Hs          : projected Hamiltonians\n",
+    "#       eigs        : eigenvalues\n",
+    "#       k_tot_times : time required for the operation\n",
     "\n",
     "\n",
     "def krylov_full_build(v0, matrix):\n",
