change maxiter to 100

--- a/docs/tutorials/sample-based-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-quantum-diagonalization.ipynb
@@ -289,6 +289,7 @@
     "    n_reps=n_reps,\n",
     "    interaction_pairs=(alpha_alpha_indices, alpha_beta_indices),\n",
     "    optimize=True,\n",
+    "    options={\"maxiter\": 100},\n",
     ")\n",
     "\n",
     "nelec = (num_elec_a, num_elec_b)\n",
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "53a039d8",
    "metadata": {},
    "outputs": [
@@ -370,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "d9f56529",
    "metadata": {
     "tags": [
@@ -594,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "7d554aa5",
    "metadata": {},
    "outputs": [
@@ -602,8 +603,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gate counts (w/o pre-init passes): OrderedDict({'rz': 12381, 'sx': 12149, 'cz': 3986, 'x': 559, 'measure': 52, 'barrier': 1})\n",
-      "Gate counts (w/ pre-init passes): OrderedDict({'sx': 7063, 'rz': 6956, 'cz': 1876, 'measure': 52, 'x': 27, 'barrier': 1})\n"
+      "Gate counts (w/o pre-init passes): OrderedDict([('rz', 12405), ('sx', 12149), ('cz', 3986), ('x', 569), ('measure', 52), ('barrier', 1)])\n",
+      "Gate counts (w/ pre-init passes): OrderedDict([('sx', 7060), ('rz', 6973), ('cz', 1876), ('measure', 52), ('x', 38), ('barrier', 1)])\n"
      ]
     }
    ],
@@ -643,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "93c1cef3-298e-4deb-8512-769fe94cd5a5",
    "metadata": {},
    "outputs": [],
@@ -654,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "332ecab3-77e6-473f-b0e7-af30f983393a",
    "metadata": {},
    "outputs": [],
@@ -681,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "2f32a352",
    "metadata": {},
    "outputs": [
@@ -691,54 +692,54 @@
      "text": [
       "Iteration 1\n",
       "\tSubsample 0\n",
-      "\t\tEnergy: -109.00209002409909\n",
-      "\t\tSubspace dimension: 88804\n",
+      "\t\tEnergy: -108.94671738559862\n",
+      "\t\tSubspace dimension: 22201\n",
       "\tSubsample 1\n",
-      "\t\tEnergy: -109.00209002409909\n",
-      "\t\tSubspace dimension: 88804\n",
+      "\t\tEnergy: -108.94671738559862\n",
+      "\t\tSubspace dimension: 22201\n",
       "\tSubsample 2\n",
-      "\t\tEnergy: -109.00209002409909\n",
-      "\t\tSubspace dimension: 88804\n",
+      "\t\tEnergy: -108.94671738559862\n",
+      "\t\tSubspace dimension: 22201\n",
       "Iteration 2\n",
       "\tSubsample 0\n",
-      "\t\tEnergy: -109.10811744360254\n",
-      "\t\tSubspace dimension: 330625\n",
+      "\t\tEnergy: -109.08223759982565\n",
+      "\t\tSubspace dimension: 319225\n",
       "\tSubsample 1\n",
-      "\t\tEnergy: -109.1173170913492\n",
-      "\t\tSubspace dimension: 311364\n",
+      "\t\tEnergy: -109.07192822063361\n",
+      "\t\tSubspace dimension: 315844\n",
       "\tSubsample 2\n",
-      "\t\tEnergy: -109.09775891404614\n",
-      "\t\tSubspace dimension: 316969\n",
+      "\t\tEnergy: -109.0424913006118\n",
+      "\t\tSubspace dimension: 314721\n",
       "Iteration 3\n",
       "\tSubsample 0\n",
-      "\t\tEnergy: -109.15752794186847\n",
-      "\t\tSubspace dimension: 488601\n",
+      "\t\tEnergy: -109.12376658112773\n",
+      "\t\tSubspace dimension: 450241\n",
       "\tSubsample 1\n",
-      "\t\tEnergy: -109.15209904065\n",
-      "\t\tSubspace dimension: 480249\n",
+      "\t\tEnergy: -109.11957686846092\n",
+      "\t\tSubspace dimension: 476100\n",
       "\tSubsample 2\n",
-      "\t\tEnergy: -109.16136340321759\n",
-      "\t\tSubspace dimension: 467856\n",
+      "\t\tEnergy: -109.12747030955879\n",
+      "\t\tSubspace dimension: 484416\n",
       "Iteration 4\n",
       "\tSubsample 0\n",
-      "\t\tEnergy: -109.18124195331923\n",
-      "\t\tSubspace dimension: 633616\n",
+      "\t\tEnergy: -109.1602965825453\n",
+      "\t\tSubspace dimension: 646416\n",
       "\tSubsample 1\n",
-      "\t\tEnergy: -109.17345094447967\n",
-      "\t\tSubspace dimension: 627264\n",
+      "\t\tEnergy: -109.1538983098806\n",
+      "\t\tSubspace dimension: 664225\n",
       "\tSubsample 2\n",
-      "\t\tEnergy: -109.17708887805357\n",
-      "\t\tSubspace dimension: 665856\n",
+      "\t\tEnergy: -109.15339966692403\n",
+      "\t\tSubspace dimension: 644809\n",
       "Iteration 5\n",
       "\tSubsample 0\n",
-      "\t\tEnergy: -109.18359618095181\n",
-      "\t\tSubspace dimension: 853776\n",
+      "\t\tEnergy: -109.18274199062286\n",
+      "\t\tSubspace dimension: 910116\n",
       "\tSubsample 1\n",
-      "\t\tEnergy: -109.18437449721104\n",
-      "\t\tSubspace dimension: 781456\n",
+      "\t\tEnergy: -109.17829844842244\n",
+      "\t\tSubspace dimension: 855625\n",
       "\tSubsample 2\n",
-      "\t\tEnergy: -109.18494107159587\n",
-      "\t\tSubspace dimension: 783225\n"
+      "\t\tEnergy: -109.17073219964975\n",
+      "\t\tSubspace dimension: 792100\n"
      ]
     }
    ],
@@ -817,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "caffd888-e89c-4aa9-8bae-4d1bb723b35e",
    "metadata": {},
    "outputs": [
