--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -89,10 +89,14 @@
     "    ```python\n",
     "    from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "    QiskitFunctionsCatalog.save_account(token=\"<your-token>\")\n",
+    "    QiskitFunctionsCatalog.save_account(token=\"<your-token>\", instance=\"<instance-crn>\")\n",
     "    ```\n",
     "\n",
-    "    Type `exit()`. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitFunctionsCatalog()`."
+    "    Type `exit()`. From now on, whenever you need to authenticate to the service, you can load your credentials with \n",
+    "    ```python\n",
+    "    from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
+    "    catalog = QiskitFunctionsCatalog()\n",
+    "    ```"
    ]
   },
   {
